# Happy_codex

./: .env  .env.example  .gitignore  IMPLEMENTATION_DECISIONS_V1.txt  README.md  TZ.md  TZ_rewritten.txt  pyproject.toml  Мета проєкту.md  Після запуску перевір у Telegram
bot/: __init__.py  app.py  config.py  main.py
bot/__pycache__/: __init__.cpython-313.pyc.2684673591888  config.cpython-313.pyc.2684678846976  main.cpython-313.pyc.2684678846976
bot/data/: __init__.py  candle_clock.py  market_source.py  market_stream.py  market_ws.py
bot/engine/: __init__.py  position_manager.py  risk_manager.py  signals.py  strategy_engine.py
bot/exchange/: bingx_client.py  metadata.py
bot/execution/: __init__.py  base_executor.py  dry_run_executor.py  order_manager.py
bot/runner/: orchestrator.py
bot/simulation/: __init__.py  backtest_engine.py
bot/storage/: models.py  schema.py  storage.py
bot/telegram/: telegram_bot.py  telegram_notifier.py  telegram_runner.py
bot/tests/: __init__.py  test_app.py  test_bingx_client.py  test_config.py  test_dry_run_executor.py  test_even_bar.py  test_main.py  test_market_source.py  test_market_stream.py  test_market_ws.py  test_orchestrator.py  test_order_manager.py  test_position_manager.py  test_risk_manager.py  test_rounding.py  test_run_telegram_polling.py  test_safe_stop.py  test_storage.py  test_strategy.py  test_sync.py  test_telegram_commands.py  test_telegram_runner.py
scripts/: debug_bingx_metadata.py  run_dry_run_single_bar_demo.py  run_dry_run_ws.py  run_telegram_polling.py  smoke_test_bingx_readonly.py
(+72 files in other folders)
