[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "bingx-short-bot"
version = "0.1.0"
description = "v1 skeleton for a BingX short-strategy bot"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "aiogram>=3.17,<4.0",
  "aiohttp>=3.11,<4.0",
  "aiosqlite>=0.20,<0.21",
  "python-dotenv>=1.0,<2.0",
  "websockets>=14.0,<15.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
  "pytest-asyncio>=0.24,<0.25",
  "ruff>=0.11,<0.12",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["bot/tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.hatch.build.targets.wheel]
packages = ["bot"]

[tool.hatch.build.targets.sdist]
include = [
  "/bot",
  "/README.md",
  "/pyproject.toml",
  "/.env.example",
]